Makefiles to make it easy to start/stop daemons

--- a/example_problems/buffer_overflow/01_length_check/Makefile
+++ b/example_problems/buffer_overflow/01_length_check/Makefile
@@ -4,5 +4,8 @@ CFLAGS := -w
 all:
 	gcc $(CFLAGS) -o basic basic.c
 
+host:
+	socat TCP4-LISTEN:4000,fork,reuseaddr exec:./basic &
+
 clean:
 	rm -f basic
