--- a/example_problems/buffer_overflow/02_overflow_into_check/Makefile
+++ b/example_problems/buffer_overflow/02_overflow_into_check/Makefile
@@ -3,5 +3,8 @@ CFLAGS := -w
 basic:
 	gcc $(CFLAGS) -o basic basic.c
 
+host:
+	socat TCP4-LISTEN:4001,fork,reuseaddr exec:./basic &
+
 clean:
 	rm -f basic
