--- a/example_problems/buffer_overflow/03_overflow_null/Makefile
+++ b/example_problems/buffer_overflow/03_overflow_null/Makefile
@@ -4,5 +4,8 @@ CFLAGS := -w -O0
 all:
 	gcc $(CFLAGS) -o basic basic.c
 
+host:
+	socat TCP4-LISTEN:4002,fork,reuseaddr exec:./basic &
+
 clean:
 	rm -f basic
