--- a/example_problems/buffer_overflow/04_smash_the_stack/Makefile
+++ b/example_problems/buffer_overflow/04_smash_the_stack/Makefile
@@ -4,5 +4,8 @@ CFLAGS := -w -g -fno-stack-protector -z execstack
 all:
 	gcc $(CFLAGS) -o basic basic.c
 
+host:
+	socat TCP4-LISTEN:4003,fork,reuseaddr exec:./basic &
+
 clean:
 	rm -f basic
