--- a/example_problems/buffer_overflow/Makefile
+++ b/example_problems/buffer_overflow/Makefile
@@ -1,3 +1,16 @@
+
+all:
+	cd 01_length_check; make;
+	cd 02_overflow_into_check; make;
+	cd 03_overflow_null; make;
+	cd 04_smash_the_stack; make;
+
+host:
+	cd 01_length_check; make host;
+	cd 02_overflow_into_check; make host;
+	cd 03_overflow_null; make host;
+	cd 04_smash_the_stack; make host;
+
 clean:
 	cd 01_length_check; make clean;
 	cd 02_overflow_into_check; make clean;
